// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PasswordField> renders a text field 1`] = `
"<div class=\\"hig__text-field\\">
    <!--ICON-SPACER-->

    <div class=\\"hig__text-field__content\\">
        <div class=\\"hig__text-field__input-wrapper\\">
            <label class=\\"hig__text-field__icon\\" for=\\"text-field-mySpecialField\\"></label>
            <button class=\\"hig__text-field__extra hig__text-field__password-reveal-button\\"></button>
            <button class=\\"hig__text-field__extra hig__text-field__password-hide-button\\"></button>
            <!--EXTRA-->
            <!--SLOT-->
            <input name=\\"mySpecialField\\" id=\\"text-field-mySpecialField\\" class=\\"hig__text-field__input hig__text-field__input--no-value\\" placeholder=\\"\\" value=\\"\\" type=\\"password\\">
            <label for=\\"text-field-mySpecialField\\" class=\\"hig__text-field__label hig__text-field__label--visible\\">Password</label>
            <button class=\\"hig__text-field__clear-button\\"></button>
        </div>
        <!--INSTRUCTIONS-->
        <!--REQUIRED-NOTICE-->
    </div>
</div>"
`;

exports[`<PasswordField> renders a text field with initial props 1`] = `
"<div class=\\"hig__text-field hig__text-field--required\\">
    <!--ICON-SPACER-->

    <div class=\\"hig__text-field__content\\">
        <div class=\\"hig__text-field__input-wrapper\\">
            <label class=\\"hig__text-field__icon\\" for=\\"text-field-mySpecialField\\"></label>
            <button class=\\"hig__text-field__extra hig__text-field__password-reveal-button\\"></button>
            <button class=\\"hig__text-field__extra hig__text-field__password-hide-button\\"></button>
            <!--EXTRA-->
            <!--SLOT-->
            <input name=\\"mySpecialField\\" id=\\"text-field-mySpecialField\\" class=\\"hig__text-field__input\\" placeholder=\\"Was it Fluffy?\\" value=\\"Rex\\" type=\\"password\\">
            <label for=\\"text-field-mySpecialField\\" class=\\"hig__text-field__label hig__text-field__label--visible\\">Name of your first pet</label>
            <button class=\\"hig__text-field__clear-button\\"></button>
        </div>
        <p class=\\"hig__text-field__instructions\\">Don't just do something, sit there.</p>
        <!--INSTRUCTIONS-->
        <p class=\\"hig__text-field__required-notice\\">You really must fill this in.</p><!--REQUIRED-NOTICE-->
    </div>
</div>"
`;

exports[`<PasswordField> renders a text field with udpated props 1`] = `
"<div class=\\"hig__text-field hig__text-field--required\\">
    <!--ICON-SPACER-->

    <div class=\\"hig__text-field__content\\">
        <div class=\\"hig__text-field__input-wrapper\\">
            <label class=\\"hig__text-field__icon\\" for=\\"text-field-mySpecialField\\"></label>
            <button class=\\"hig__text-field__extra hig__text-field__password-reveal-button\\"></button>
            <button class=\\"hig__text-field__extra hig__text-field__password-hide-button\\"></button>
            <!--EXTRA-->
            <!--SLOT-->
            <input name=\\"mySpecialField\\" id=\\"text-field-mySpecialField\\" class=\\"hig__text-field__input\\" placeholder=\\"Was it Fluffy?\\" value=\\"Rex\\" type=\\"password\\">
            <label for=\\"text-field-mySpecialField\\" class=\\"hig__text-field__label hig__text-field__label--visible\\">Name of your first pet</label>
            <button class=\\"hig__text-field__clear-button\\"></button>
        </div>
        <p class=\\"hig__text-field__instructions\\">Don't just do something, sit there.</p><!--INSTRUCTIONS-->
        <p class=\\"hig__text-field__required-notice\\">You really must fill this in.</p><!--REQUIRED-NOTICE-->
    </div>
</div>"
`;
